@@ -1,0 +1,21 @@
+Dear GMT user-
+
+We are pleased to announce the release of GMT version 4.5.4.
+This release mostly fixes several bugs. At the same time,
+we are making available via cvs access to the next GMT 5
+versions.  For more information on GMT 5 and how should
+consider trying it out, see gmt.soest.hawaii.edu/5.
+
+For a complete list of enhancements and features, please
+see Chapter 1 in the Technical Reference & Cookbook or
+follow the RELEASES link on the updated GMT web page
+(http://gmt.soest.hawaii.edu).
+
+As of today, all but the Japan, European (2), and S Africa mirror
+ftp servers are now synced up; we hope those four will follow
+within 24 hours.  Alternatively, OS X users will find GMT 4.5.4
+in Fink's 'unstable' tree.
+
+Sincerely,
+
+The GMT Team
