@@ -1,5 +1,5 @@
 %------------------------------------------
-%	$Id: GMT_Chapter_1.tex,v 1.152 2010-07-14 14:55:39 remko Exp $
+%	$Id: GMT_Chapter_1.tex,v 1.153 2010-10-09 22:26:20 guru Exp $
 %
 %	The GMT Documentation Project
 %	Copyright 2000-2010.
@@ -27,13 +27,58 @@ Please send your comments to
 
 \section{What is new in \gmt\ 4.x?}
 
-\GMT\ 4.x has continued to see both development of new features as well as corrections of
-legacy bugs and problems, including Windows DLL silliness.  However, the \GMT\ 4.5.3 release is mostly bug-fixes
-as all development is now focussed on \GMT\ 5; this new series
-will be distinguished by being completely restructured so as to allow developers to call
+\GMT\ 4.x will continue to see corrections of legacy bugs and problems, including Windows DLL silliness.
+However, the \GMT\ 4.5.4 release is mostly bug-fixes as all development is now focussed on \GMT\ 5; this
+new series is distinguished by being completely restructured so as to allow developers to call
 high-level \GMT\ processes from a variety of programming environments.  Below is a brief
 history of the development milestones in the 4.x series.  We expect to maintain the \GMT 4 series
-for some time after \GMT 5 is released later this year.
+for some time after \GMT 5 is released later this year; an $\alpha$-release was made available for
+CVS on Oct-15, 2010.
+
+\subsection{Overview of \gmt\ 4.5.4 [Oct-15, 2010]}
+
+This is again mostly a bug-fix release, and coincides with the availability of \GMT\ 5.0.0$\alpha$.
+A few minor improvements have been added:
+
+\begin{enumerate}
+\item The \GMTprog{spotter} supplement now converts geodetic latitudes to geocentric before
+doing spherical rotations and recovers geodetic coordinates for output (this new behavior can
+be bypassed by setting ELLIPSOID to Sphere).  Thanks to L. M. Matias for pointing this out.
+\item We have added time-axes support for the Hawaiian language.
+\end{enumerate}
+Here is the list of bug corrections:
+\begin{description}
+	\item [\GMTprog{gmt\_map.c}]:	Did not check if nodes were beyond the horizon in \GMTfunc{GMT\_grd\_project}.
+		Also did not initialize output grid to NaNs before filling.
+	\item [\GMTprog{gmt\_plot.c}]:	Bug in fault symbol \GMTprog{psxy} \Opt{Sfrc} fixed (thanks to J. Robert).
+		Also, \GMT_func{GMT\_map\_latline} and \GMT_func{GMT\_map\_lonline} functions tried to draw 
+		two-point lines when in fact no points were defined.
+	\item [\GMTprog{grdmask.c}]:	The \Opt{Ap}$|${\bf m} options were ignored since the {\it mode} was not checked.
+	\item [\GMTprog{grdtrack.c}]:	Did not ensure that given \Opt{R} was adjusted to fit grid spacing.
+	\item [\GMTprog{minmax.c}]:	With \Opt{I}, could end up returning \Opt{R}355/0/... since 360 became 0.
+	\item [\GMTprog{nearneighbor.c}]:	Did not check that \Opt{S} had not been set.
+	\item [\GMTprog{ps2raster.c}]:	Made tolerant of \\r-only line-endings which caused trouble before.
+		The \Opt{A-} option did not reset \Opt{A} for \Opt{W}.
+	\item [\GMTprog{psimage.c}]:	The justify text variable must be 3-char longs to hold trailing 0.
+		This caused SEGV on some systems.
+	\item [\GMTprog{pstext.c}]:	Added missing description of \Opt{A} option.
+	\item [\GMTprog{psxy[z].c}]:	Units given in \Opt{S} without sizes (e.g., \Opt{Sci}) would be
+		ignored and overridden by {\bf MEASURE\_UNIT}.  The \Opt{Ap}$|${\bf m} options were ignored since the {\it mode} was not checked.
+	\item [\GMTprog{mgd77/mgd77manage.c}]:	The \Opt{F} option had no break statement to prevent fall-through.
+	\item [\GMTprog{mgd77/mgd77track.c}]:	Had inactive code to write segment header to output.
+	\item [\GMTprog{mgd77/mgd77list.c}]:	The \Opt{G} option was not listed in synopsis or usage, only
+		in the man pages.  Also \Opt{F}all+ and \Opt{F}mgd77+ did not append the auxiliary columns properly.
+	\item [\GMTprog{mgd77/mgd77magref.c}]:	The \Opt{D} option failed on numeric arguments.
+	\item [\GMTprog{misc/gmtstitch.c}]:	Could crash if \Opt{C} was used.
+	\item [\GMTprog{misc/gmt2kml.c}]:	Did not parse \Opt{D}``description'' for points.
+		Only append running number when a segment has more than one point, else just use segment label.
+	\item [\GMTprog{spotter/rotconverter.c}]:	Complained of ``bad option'' when a rotation with a
+		negative longitude was given on the command line, e.g. -135/35/-2.5.
+		Would sometimes issue a rotation twice (same time).
+	\item [\GMTprog{sph/Makefile}]:	Did not have LDFLAGS in link statement.
+}
+Also, Appendix F had missing shading for two items in the Standard+ table, and example 23 placed the city names at
+an angle of 1 degree rather than horizontally.
 
 \subsection{Overview of \gmt\ 4.5.3 [Jul-15, 2010]}
 
