@@ -1,5 +1,5 @@
 This server is one of 9 mirror sites for the Generic Mapping Tools (GMT).
-		This directory contains version 4.5.3
+		This directory contains version 4.5.4
 
 The mirror sites are:
 
