@@ -1,12 +1,12 @@
 ; Script generated by the Inno Setup Script Wizard.
-; $Id: GMTsetup_gdal.iss,v 1.5 2010-07-13 01:21:42 guru Exp $
+; $Id: GMTsetup_gdal.iss,v 1.6 2010-10-09 22:26:20 guru Exp $
 ; Creates Windows Setup file for the Basic GMT installation w/ GDAL support (no h/f coastlines, no PDF)
 
 [Setup]
 AppName=GMT
 AppId=gmt4win
-AppVerName=GMT 4.5.3
-AppVersion=4.5.3
+AppVerName=GMT 4.5.4
+AppVersion=4.5.4
 AppUpdatesURL=http://gmt.soest.hawaii.edu
 DefaultDirName={sd}\programs\GMT
 DefaultGroupName=GMT
@@ -14,7 +14,7 @@ AllowNoIcons=yes
 UsePreviousAppDir=yes
 LicenseFile=C:\GMTdev\GMT\LICENSE.TXT
 InfoAfterFile=C:\GMTdev\INFO\GMT_postinstall_message.txt
-OutputBaseFilename=GMT4.5.3_gdal_install
+OutputBaseFilename=GMT4.5.4_gdal_install
 MinVersion=0,4.0.1381
 OutputDir=C:\GMTdev\INSTALLERS
 
