@@ -1,13 +1,19 @@
 <HTML>
-<!--  $Id: gmt_arrrghh.html,v 1.28 2010-06-22 22:27:22 guru Exp $  -->
+<!--  $Id: gmt_arrrghh.html,v 1.29 2010-10-09 22:26:20 guru Exp $  -->
 <TITLE>GMT Incompatibilities Notes</title>
 <BODY bgcolor="#ffffff">
 <CENTER><H2>GMT Incompatibilities Notes</CENTER></H2><P>
+<HR>
+<H3><CENTER>15-OCT-2010: GMT Version 4.5.4 Released</H3></CENTER>
+4.5.4 scripts should be fully backward compatible with 4.5.3.  For a list of all the new
+capabilities and enhancements, see the <A HREF="gmt_releases.html">RELEASES</A>
+page.
 <HR>
 <H3><CENTER>15-JUL-2010: GMT Version 4.5.3 Released</H3></CENTER>
 4.5.3 scripts should be fully backward compatible with 4.5.2.  For a list of all the new
 capabilities and enhancements, see the <A HREF="gmt_releases.html">RELEASES</A>
 page.
+<HR>
 <H3><CENTER>15-JAN-2010: GMT Version 4.5.2 Released</H3></CENTER>
 4.5.2 scripts should be fully backward compatible with 4.5.1.  For a list of all the new
 capabilities and enhancements, see the <A HREF="gmt_releases.html">RELEASES</A>
